--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,5 +1,6 @@
 .home-page {
     overflow: hidden;
+    background-color: rgba(235, 235, 235, 1);
 }
 
 nav {
@@ -44,6 +45,7 @@ nav {
 .home-purple-component-mobile img {
     position: absolute;
     width: 280px;
+    z-index: 1;
 }
 
 .home-medical-component-mobile img {
@@ -51,6 +53,7 @@ nav {
     width: 280px;
     right: 0;
     top: 60px;
+    z-index: 2;
 }
 
 .home-purple-component-desktop {
@@ -66,6 +69,7 @@ nav {
     position: absolute;
     left: 55px;
     top: 110px;
+    z-index: 2;
 }
 
 .home-frase-container h1 {
@@ -93,6 +97,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .home-schedule-button button {
@@ -106,12 +111,15 @@ nav {
     margin-top: 35px;
     border: none;
     border-radius: 63px;
+    cursor: pointer;
+    z-index: 1;
 }
 
 .home-text-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
 .home-text-container h2 {
@@ -132,10 +140,17 @@ nav {
     display: none;
 }
 
+.home-share {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .home-share img {
     margin-top: 50px;
     height: 15px;
     width: 100%;
+    z-index: 2;
 }
 
 .home-information-card {
@@ -156,6 +171,7 @@ nav {
     padding: 0 22px 22px 22px;
     text-align: justify;
     gap: 20px;
+    z-index: 1;
 }
 
 .home-information-card-img {
@@ -186,6 +202,7 @@ nav {
     align-items: center;
     flex-direction: column;
     padding: 20px;
+    z-index: 2;
 }
 
 .home-feedback h3 {
@@ -193,6 +210,7 @@ nav {
     margin-bottom: 30px;
     color: rgba(123, 47, 198, 1);
     font-weight: 800;
+    z-index: 2;
 }
 
 
@@ -201,7 +219,7 @@ nav {
     align-items: center;
     height: 150px;
     width: 95%;
-    background: #D9D9D9;
+    background: rgba(204, 204, 204, 1);
     border-radius: 30px;
     text-align: justify;
     padding: 0 10px 0 10px;
@@ -230,6 +248,7 @@ nav {
 
 .home-feedback-container {
     position: relative;
+    z-index: 2;
 }
 
 .home-footer {
@@ -270,7 +289,7 @@ nav {
         transform: translate(-20px, 24px);
     }
 
-    .home-frase-container span{
+    .home-frase-container span {
         font-size: 23px;
         top: -23px;
     }
@@ -290,6 +309,7 @@ nav {
 
     .home-share img {
         height: 20px;
+        width: 80%;
     }
 
     .home-information-card-container {
@@ -328,7 +348,7 @@ nav {
 @media(min-width: 992px) {
 
     .home-logo-container img {
-        width: 190px;
+        width: 180px;
     }
 
     .home-login-container {
@@ -339,11 +359,13 @@ nav {
         display: flex;
         align-items: center;
         gap: 15px;
+        z-index: 2;
     }
 
     .home-login-container-desktop p {
         font-weight: 400;
         color: #9E63FF;
+        cursor: pointer;
     }
 
     .home-medical-component-mobile {
@@ -356,6 +378,7 @@ nav {
 
     .home-purple-component-desktop img {
         width: 530px;
+        z-index: 2;
     }
 
     .home-purple-component-mobile img {
@@ -371,7 +394,7 @@ nav {
         width: 540px;
         top: 0;
         right: 0;
-        z-index: -1;
+        z-index: 1;
     }
 
     .home-components-container {
@@ -383,6 +406,7 @@ nav {
     }
 
     .home-text-container {
+        margin-top: 30px;
         margin-bottom: -30px;
     }
 
@@ -395,17 +419,19 @@ nav {
         align-items: center;
         justify-content: center;
         gap: 15px;
+        z-index: 2;
     }
 
     .home-schedule-button button {
         position: absolute;
         left: 200px;
         top: 320px;
+        z-index: 3;
     }
 
     .home-information-card {
-        justify-content: end;
-        padding: 0 40px;
+        justify-content: center;
+        transform: translateX(200px);
     }
 
     .home-information-card-container p {
@@ -414,7 +440,7 @@ nav {
 
     .home-information-card-container span {
         display: flex;
-        font-size: 10px;
+        font-size: 12px;
         color: #4CA9FF;
         font-weight: 500;
         line-height: 12px;
@@ -493,7 +519,6 @@ nav {
 
     .home-medical-component-desktop img {
         width: 700px;
-        right: 30px;
     }
 
     .home-components-container {
@@ -504,7 +529,7 @@ nav {
         left: 400px;
     }
 
-    .home-information-card{
+    .home-information-card {
         padding: 0 250px;
     }
 
@@ -516,9 +541,10 @@ nav {
         width: 600px;
         height: 350px;
         border-radius: 130px;
+        z-index: 1;
     }
 
-    .home-feedback-container h4{
+    .home-feedback-container h4 {
         transform: translateX(-320px);
     }
 
