--- a/src/components/MedicalCard/styles.css
+++ b/src/components/MedicalCard/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 .card {
     height: 155px;
@@ -11,6 +10,7 @@
     flex-direction: column;
     background-color: #EBEBEB66;
     gap: 6px;
+    z-index: 3;
 }
 
 .img-container {
@@ -33,26 +33,27 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-family: 'Poppins', sans-serif;
 }
 
 .medical-name {
-    font-size: 13px;
+    font-size: 10px;
+    font-weight: 500;
 }
 
 .medical-specialization {
-    font-size: 10px;
+    font-size: 9px;
+    font-weight: 500;
 }
 
 .medical-code {
-    font-size: 11px;
-    font-family: 'Poppins', sans-serif;
+    font-size: 9px;
+    font-weight: 500;
 }
 
-@media(min-width: 1280px) {
+@media(min-width: 992px) {
     .card {
-        width: 230px;
-        height: 280px;
+        width: 200px;
+        height: 260px;
         border-radius: 27px;
         gap: 15px;
     }
@@ -62,7 +63,7 @@
     }
 
     .medical-name {
-        font-size: 20px;
+        font-size: 17px;
     }
 
     .medical-specialization {
