--- a/src/pages/homeClient/styles.css
+++ b/src/pages/homeClient/styles.css
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     transform: translate(20px, 30px);
-    height: 200px;
+    margin-bottom: 100px;
 }
 
 .home-client-historic-container {
@@ -323,7 +323,6 @@
     }
 
     .home-client-historic {
-        height: 248px;
         flex-direction: column;
         transform: translate(100px, 100px);
     }
@@ -350,13 +349,18 @@
         padding: 0 20px;
         align-items: end;
         justify-content: center;
-        height: 470px;
+    }
+
+    .home-client-container {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
     }
 
     .home-client-card-scheduling {
         border-radius: 150px 150px 0 0;
         flex-direction: column-reverse;
-        width: 350px;
+        width: 280px;
         height: 300px;
         justify-content: right;
         padding: 20px 60px;
@@ -458,8 +462,7 @@
 @media(min-width: 1200px) {
 
     .home-client-historic {
-        height: 133px;
-        transform: translate(120px, 100px);
+        transform: translate(150px, 60px);
     }
 
     .home-client-img-desktop {
@@ -468,7 +471,6 @@
 
     .home-client-img-desktop img {
         width: 500px;
-
     }
 
     .home-client-cards {
