--- a/src/pages/Services/styles.css
+++ b/src/pages/Services/styles.css
@@ -1,8 +1,7 @@
 .services-page {
     background-color: #EBEBEB;
-    width: 100%;
-    height: 100vh;
-    font-family: 'Poppins', 'sans serif';
+    overflow: hidden;
+    min-height: 100vh;
 }
 
 nav {
@@ -12,38 +11,37 @@ nav {
     padding: 10px;
 }
 
-.logo {
+.services-logo-mobile {
     width: 105px;
     height: 25px;
 }
 
-.menu-login-container {
+.services-menu-login-container {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 15px;
 }
 
-.menu-icon {
+.services-menu-icon {
     width: 34px;
     height: 24px;
 }
 
-.title-page {
-    display: flex;
-    flex-direction: column;
-    margin-left: 42%;
-    margin-top: 40px;
+.services-title-page {
+    position: absolute;
+    right: 10px;
+    top: 100px;
 }
 
-.big-title {
+.services-big-title {
     font-size: 40px;
     font-weight: bold;
     color: #4CA9FF;
     display: flex;
 }
 
-.small-title {
+.services-small-title {
     color: #004585;
     font-size: 15px;
     font-weight: 500;
@@ -52,14 +50,280 @@ nav {
     bottom: 15px;
 }
 
-.services-image {
+.services-components-container {
     position: relative;
-    bottom: 80px;
+    margin-top: 90px;
 }
 
-.services-card-1 {
-    display: flex;
+.services-image-mobile {
     position: relative;
-    bottom: 290px;
-    left: 180px;
+    bottom: 80px;
+    z-index: 2;
+}
+
+.services-image-desktop {
+    display: none;
+}
+
+.services-small-card {
+    position: absolute;
+    top: 70px;
+    right: 15px;
+    z-index: 2;
+}
+
+
+.services-card-container-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    position: relative;
+    margin-top: -70px;
+    margin-bottom: 30px;
+    z-index: 2;
+}
+
+.services-card-container-desktop {
+    display: none;
+}
+
+.services-card-container-desktop-1280 {
+    display: none;
+}
+
+.services-rectangle-white {
+    position: absolute;
+    height: 700px;
+    width: auto;
+    top: 280px;
+    z-index: 0.5;
+}
+
+.services-rectangle-blue {
+    display: none;
+}
+
+.services-remedy-adesive {
+    position: absolute;
+    z-index: 2;
+    left: 20px;
+    bottom: 480px;
+    width: 100px;
+}
+
+.services-key-adesive {
+    position: absolute;
+    z-index: 4;
+    bottom: 100px;
+    right: 20px;
+    width: 100px;
+}
+
+.services-microscopic-adesive {
+    display: none;
+}
+
+@media (min-width: 576px) {
+    .services-title-page{
+        right: 50px;
+    }
+    .services-big-title {
+        font-size: 55px;
+    }
+    .services-small-title {
+        font-size: 20px;
+        bottom: 20px;
+    }
+    .services-card-mobile {
+        display: none;
+    }
+
+    .services-card-container-mobile {
+        display: flex;
+    }
+
+    .services-card-container-tablet{
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+        position: relative;
+        margin-top: -70px;
+        margin-bottom: 30px;
+        z-index: 2;
+    }
+
+    .services-rectangle-white {
+        height: 800px;
+    }
+
+    .services-remedy-adesive {
+        bottom: 570px;
+        left: 40px;
+    }
+
+    .services-key-adesive {
+        right: 40px;
+    }
+}
+
+@media (min-width: 992px) {
+    .services-components-container {
+        margin-top: 0px;
+    }
+    
+    .services-image-mobile {
+        display: none;
+    }
+
+    .services-image-desktop {
+        display: flex;
+        position: relative;
+        z-index: 2;
+    }
+
+    .services-card-container-mobile {
+        display: none;
+    }
+
+    .services-card-container-desktop {
+        display: grid;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 100px -300px 100px;
+        gap: 50px;
+        position: relative;
+        top: -400px;
+        z-index: 2;
+    }
+
+    .services-filter {
+        display: none;
+    }
+
+    .services-small-card {
+        display: none;
+    }
+
+    .services-title-page {
+        top: 70px;
+        right: 150px;
+        z-index: 3;
+    }
+
+    .services-big-title {
+        font-size: 100px;
+    }
+
+    .services-small-title {
+        font-size: 40px;
+        bottom: 40px;
+    }
+
+    .services-rectangle-white {
+        height: 1000px;
+        width: auto;
+        top: 0;
+        left: -70px;
+    }
+
+    .services-rectangle-blue {
+        display: flex;
+        position: absolute;
+        width: 400px;
+        bottom: 40px;
+        right: 100px;
+    }
+
+    .services-filter {
+        display: flex;
+    }
+
+    .services-remedy-adesive {
+        bottom: 300px;
+        left: 50px;
+        width: 120px;
+        z-index: 3;
+    }
+
+    .services-key-adesive {
+        width: 150px;
+        bottom: 70px;
+    }
+
+    .services-microscopic-adesive {
+        display: flex;
+        position: absolute;
+        z-index: 3;
+        width: 100px;
+        top: 150px;
+        right: 360px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .services-card-container-desktop {
+        display: none;
+    }
+
+    .services-card-container-desktop-1280 {
+        display: grid;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 100px -500px 100px;
+        gap: 70px;
+        position: relative;
+        top: -650px;
+        z-index: 2;
+    }
+
+    .services-title-page {
+        right: 200px;
+    }
+
+    .services-big-title {
+        font-size: 130px;
+    }
+
+    .services-rectangle-white {
+        top: 600px;
+        left: 0;
+    }
+
+    .services-rectangle-blue {
+        width: 600px;
+        right: 200px;
+    }
+    
+}
+
+@media (min-width: 1900px) {
+    .services-title-page {
+        top: 150px;
+    }
+    
+    .services-big-title {
+        font-size: 170px;
+    }
+    .services-small-title {
+        font-size: 70px;
+        bottom: 70px;
+    }
+
+    .services-rectangle-white {
+        width: 350px;
+        height: auto;
+        left: 0;
+    }
+
+    .services-rectangle-blue {
+        width: 670px;
+    }
 }
