--- a/src/pages/homeClient/styles.css
+++ b/src/pages/homeClient/styles.css
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     transform: translate(20px, 30px);
-    margin-bottom: 100px;
+    height: 200px;
 }
 
 .home-client-historic-container {
@@ -323,6 +323,7 @@
     }
 
     .home-client-historic {
+        height: 248px;
         flex-direction: column;
         transform: translate(100px, 100px);
     }
@@ -349,18 +350,13 @@
         padding: 0 20px;
         align-items: end;
         justify-content: center;
-    }
-
-    .home-client-container {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
+        height: 470px;
     }
 
     .home-client-card-scheduling {
         border-radius: 150px 150px 0 0;
         flex-direction: column-reverse;
-        width: 280px;
+        width: 350px;
         height: 300px;
         justify-content: right;
         padding: 20px 60px;
@@ -462,7 +458,8 @@
 @media(min-width: 1200px) {
 
     .home-client-historic {
-        transform: translate(150px, 60px);
+        height: 133px;
+        transform: translate(120px, 100px);
     }
 
     .home-client-img-desktop {
@@ -471,6 +468,7 @@
 
     .home-client-img-desktop img {
         width: 500px;
+
     }
 
     .home-client-cards {
