--- a/src/pages/Client/Payment/styles.css
+++ b/src/pages/Client/Payment/styles.css
@@ -190,6 +190,10 @@
         height: auto;
     }
 
+    .payment-container {
+        gap: 120px
+    }
+
     .payment-purple-component {
         width: 300px;
         height: 700px;
@@ -201,8 +205,8 @@
         right: 0;
         top: -100px;
         border-radius: 0 0 120px 120px;
-        height: 500px;
-        width: 250px;
+        height: 600px;
+        width: 260px;
     }
 
     .payment-frase h1 {
