--- a/src/pages/Loading/styles.css
+++ b/src/pages/Loading/styles.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    top: 0;
     right: 0;
     display: flex;
     align-items: center;
