--- a/src/pages/Client/homeClient/styles.css
+++ b/src/pages/Client/homeClient/styles.css
@@ -32,6 +32,7 @@
 }
 
 .home-client-historic {
+    width: 60%;
     display: flex;
     flex-direction: column;
     transform: translate(20px, 30px);
@@ -42,6 +43,7 @@
     display: flex;
     align-items: center;
     gap: 7px;
+    cursor: pointer;
 }
 
 .home-client-img-desktop {
@@ -461,7 +463,6 @@
 }
 
 @media(min-width: 1200px) {
-
     .home-client-historic {
         transform: translate(120px, 100px);
     }
@@ -474,7 +475,8 @@
         width: 500px;
     }
 
-    .home-client-historic{
+    .home-client-historic {
+        width: unset;
         height: 400px;
     }
 
